@@ -1,5 +1,11 @@
 2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/ChartPanel.java
+    (fillZoomRectangle): Change default to true,
+    (mousePressed): Don't change cursor for panning unless panning is enabled.
+
+2009-03-26  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/axis/ValueAxis.java
     (equals): Only check range if autoRange is false.
 
